--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://k4li-0x0.github.io/webportfolio/",
+  "private": false,
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
