--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://k4li-0x0.github.io/webportfolio/",
+  "homepage": "https://k4li.ru/",
   "private": false,
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
